# guardrailed-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: eval.yml  terraform.yml
data/: README.md
data/synthesizer/: README.md  generate.py  requirements.txt  schemas.py
docs/: demo-script.md  getting-started.md  repo-bootstrap-brief.md  runbook.md
eval/: README.md  requirements.txt  runner.py
eval/prompts/: golden.yaml  red_team.yaml
lambdas/query_ambassadors/: README.md  handler.py  requirements.txt
lambdas/query_ambassadors/tests/: test_handler.py
scripts/: deploy-demo.sh  invoke-agent.py  run-eval.sh  seed-data.sh  smoke-test.sh
terraform/: README.md
terraform/bootstrap/oidc/: README.md  main.tf  outputs.tf  variables.tf
terraform/envs/client-template/: README.md
terraform/envs/demo/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/agent/: main.tf  outputs.tf  variables.tf
terraform/modules/data-plane/: main.tf  outputs.tf  variables.tf
terraform/modules/guardrails/: main.tf  outputs.tf  variables.tf
terraform/modules/identity/: main.tf  outputs.tf  variables.tf
terraform/modules/observability/: main.tf  outputs.tf  variables.tf
terraform/modules/tools/: main.tf  outputs.tf  variables.tf
